Get movie by ID api configured, fix issue with background img not showing

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@
     @apply text-2xl font-bold text-white sm:text-3xl;
   }
 
+  h3{
+    @apply text-xl font-bold text-white sm:text-3xl;
+  }
+
   main {
     @apply min-h-screen relative bg-primary;
   }
